# daemonflux

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CLAUDE.md  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: develop.yml  python-publish.yml
examples/: example.ipynb  example_height_evolution.ipynb  prd22_qf2_make_flux_maps.ipynb
src/daemonflux/: __init__.py  flux.py  util.py  utils.py
src/phantomflux/: __init__.py  flux.py
tests/: test_calibration_20230207.pkl  test_calibration_202303_1.pkl  test_daemonflux.py  test_daemonsplines_generic_20230207.pkl  test_daemonsplines_generic_202303_1.pkl
