[metadata]
name = daemonflux
version = 0.8.2
author = Anatoli Fedynitch
maintainer_email = afedynitch@gmail.com
description = Tabulated representation of a muon-calibrated muon and neutrino flux model
license = BSD 3-Clause License
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mceq-project/daemonflux
download_url = https://pypi.python.org/pypi/daemonflux
classifiers =
        Development Status :: 4 - Beta
        Topic :: Scientific/Engineering :: Physics
        Intended Audience :: Science/Research
        Programming Language :: Python
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
        Programming Language :: Python :: 3.12
        License :: OSI Approved :: BSD License
        License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)

[options]
packages = find:
package_dir =
    = src
include_package_data = True
python_requires = >=3.8
install_requires =
    numpy
    scipy>=1.8.0
    rich

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest

examples =
    matplotlib

[flake8]
max-line-length = 90
extend-ignore = E203

[pydocstyle]
convention = numpy
